--- a/style.css
+++ b/style.css
@@ -1,3 +1,7 @@
+* {
+  box-sizing: border-box;
+}
+
 body {
   font-family: "Arial";
 }
@@ -16,10 +20,12 @@ body {
   font-size: 36px;
   letter-spacing: 4px;
   text-decoration: none;
+  color: #4a4a4a;
 }
 
 .navigation {
   padding-top: 12px;
+
 }
 
 .navigation a {
@@ -49,11 +55,18 @@ body {
 
 }
 
-.slideshow {
+.content-wrapper {
+  margin-top: 64px;
+}
 
+.slideshow {
+  /*max-width: 1080px;*/
+  position: relative;
+  margin: auto;
 }
 
 .auto-slides {
-
+  display: none;
+  width: 100%;
 }
 
