--- a/style.css
+++ b/style.css
@@ -61,6 +61,7 @@ body {
 .content-wrapper {
   margin-top: 64px;
   /*changing the height moves the nav bar for some reason*/
+  height: 960px;
 }
 
 .slideshow {
@@ -75,10 +76,10 @@ body {
 }
 
 .gallery {
-  width: 600px;
+  width: 1080px;
+  height: 960px;
   position: relative;
   margin: auto;
-  /*something about the gallery is moving the nav bar too */
 }
 
 .gallery-main {
@@ -86,7 +87,9 @@ body {
 }
 
 .gallery-images {
-
+  width: 600px;
+  position: relative;
+  margin: auto;
 }
 
 .gallery-img {
@@ -95,6 +98,31 @@ body {
 }
 
 .gallery-nav {
+
+}
+
+.gallery-buttons {
+  height: auto;
+}
+
+.prev-button, .next-button {
+  font-size: 3em;
+  cursor: pointer;
+  position: absolute;
+  top: 35%;
+  width: auto;
+  color: #404040;
+}
+
+.next-button {
+  right: 0;
+}
+
+.prev-button:hover, .next-button:hover {
+	color: #267326;
+}
+
+.gallery-main .gallery-buttons {
 
 }
 
