--- a/style.css
+++ b/style.css
@@ -18,21 +18,20 @@ body {
 }
 
 .title {
-  font-size: 36px;
+  font-size: 40px;
   letter-spacing: 4px;
   text-decoration: none;
-  color: #2a2a2a;
+  color: #4040bf;
 }
 
 .navigation {
   padding-top: 12px;
-
 }
 
 .navigation a {
   font-size: 16px;
-  margin-left: 4px;
-  margin-right: 4px;
+  margin-left: 6px;
+  margin-right: 6px;
   text-decoration: none;
   color: #2a2a2a;
 }
@@ -46,12 +45,12 @@ body {
 }
 
 .navigation a:hover {
-  color: #6a6a6a;
+  color: #ccb3ff;
 }
 
 .navigation a.active {   /* not the CSS active */
-  color: #267326;
-  text-shadow: 1px 1px #d9f2d9;
+  color: #884dff;
+  text-shadow: 1px 1px #ddccff;
 }
 
 .container {
@@ -145,6 +144,17 @@ body {
 
 .highlight {
   border-color: #000000;
+}
+
+.public-art {
+  width: 900px;
+  height: 700px;
+}
+
+.public-art .tall {
+  width: 450px;
+  height: 100%;
+  margin: auto;
 }
 
 .footer {
