--- a/style.css
+++ b/style.css
@@ -64,7 +64,7 @@ body {
 }
 
 .slideshow {
-  width: 600px;
+  width: 700px;
   position: relative;
   margin: auto;
 }
@@ -72,6 +72,7 @@ body {
 .slide-img {
   display: block;
   width: 100%;
+  /*height: 800px;*/
 }
 
 .gallery {
@@ -123,11 +124,15 @@ body {
 }
 
 .prev-button, .next-button {
-  font-size: 3em;
+  font-size: 2em;
   cursor: pointer;
   position: absolute;
   width: auto;
-  color: #404040;
+  color: #999999;
+}
+
+.prev-button {
+  left: 0;
 }
 
 .next-button {
@@ -139,7 +144,7 @@ body {
 }
 
 .gallery-buttons .prev-button, .gallery-buttons .next-button{
-  top: 35%;
+  margin-top: 40px;
 }
 
 .highlight {
