Archive tab set up
Set up the CSS classes and html set up for the archive tab, including a grid for the images. Added two tabs in the archive to switch between abstractions and landscapes. Added archive tab script which also sets the abstractions tab as open by default.

--- a/style.css
+++ b/style.css
@@ -36,14 +36,6 @@ body {
   color: #2a2a2a;
 }
 
-.navigation a:link {
-  
-}
-
-.navigation a:visited {
-  
-}
-
 .navigation a:hover {
   color: #ccb3ff;
 }
@@ -160,6 +152,39 @@ body {
   width: 450px;
   height: 100%;
   margin: auto;
+}
+
+.archive-wrapper {
+
+}
+
+.archive-tab {
+
+}
+
+.archive-tab a {
+
+}
+
+.archive-tab a:hover {
+
+}
+
+.archive-tab a.active {		/*also not the CSS active */
+
+}
+
+.archive-grid {
+  display: grid;
+  grid-template-columns: auto auto auto;
+}
+
+.tab-content {
+	
+}
+
+.archive-img {
+  text-align: center;
 }
 
 .footer {
