--- a/style.css
+++ b/style.css
@@ -4,6 +4,7 @@
 
 body {
   font-family: "Arial";
+  margin: 0;
 }
 
 .header {
@@ -43,6 +44,15 @@ body {
 .navigation a.active {   /* not the CSS active */
   color: #884dff;
   text-shadow: 1px 1px #ddccff;
+}
+
+.background {
+	background-image: url("./images/IMG_0312.jpg");
+	height: 100%;
+	background-position: center;
+	background-repeat: no-repeat;
+	background-size: cover;
+	position: relative;
 }
 
 .container {
@@ -155,40 +165,70 @@ body {
 }
 
 .archive-wrapper {
-
+  max-width: 964px;
+  padding-bottom: 32px;
+  margin: auto;
+  margin-top: 32px;
 }
 
 .archive-tab {
-
+  margin: auto;
+  width: 50%;
+  text-align: center;
 }
 
 .archive-tab a {
-
+  cursor: pointer;
+  padding: 14px 16px;
+  font-size: 28px;
 }
 
 .archive-tab a:hover {
-
+  color: #ccb3ff;
 }
 
 .archive-tab a.active {		/*also not the CSS active */
+  color: #884dff;
+  text-shadow: 1px 1px #ddccff;
+}
+
+.tab-content {		/* gotten by the archive script */
 
 }
 
 .archive-grid {
-  display: grid;
+  display: inline-grid;
   grid-template-columns: auto auto auto;
-}
-
-.tab-content {
-	
+  grid-gap: 32px;
+  margin-top: 32px;
 }
 
 .archive-img {
-  text-align: center;
+  max-height: 300px;
+  max-width: 300px;
+  margin: auto;
+  border: 4px solid #d9d9d9;
+}
+
+.archive-modal {
+  
+}
+
+.modal-img {
+  
+}
+
+#modal-caption {
+  
+}
+
+.modal-close {
+  
 }
 
 .footer {
   bottom: 0;
+  margin-top: 32px;
 }
 
 .footer-left {
