--- a/style.css
+++ b/style.css
@@ -10,8 +10,8 @@ body {
 .header {
   text-align: center;
   min-width: 600px;
-  padding-top: 16px;
   margin: auto;
+  margin-top: 64px;
 }
 
 .homepage {
@@ -19,22 +19,25 @@ body {
 }
 
 .title {
+  text-transform: uppercase;
   font-size: 40px;
-  letter-spacing: 4px;
+  letter-spacing: 5px;
   text-decoration: none;
   color: #4040bf;
 }
 
 .navigation {
-  padding-top: 12px;
+  padding-top: 32px;
 }
 
 .navigation a {
+  text-transform: uppercase;
   font-size: 16px;
   margin-left: 6px;
   margin-right: 6px;
+  letter-spacing: 2px;
   text-decoration: none;
-  color: #2a2a2a;
+  color: #8c8c8c;
 }
 
 .navigation a:hover {
@@ -42,25 +45,25 @@ body {
 }
 
 .navigation a.active {   /* not the CSS active */
-  color: #884dff;
-  text-shadow: 1px 1px #ddccff;
+  color: #00a3cc;
+  text-shadow: 1px 1px #80e0ff;
 }
 
-.background {
-	background-image: url("./images/IMG_0312.jpg");
-	height: 100%;
-	background-position: center;
-	background-repeat: no-repeat;
-	background-size: cover;
-	position: relative;
-}
+/*.background {
+  background-image: url("./images/IMG_0312.jpg");
+  height: 100%;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  position: relative;
+}*/
 
 .container {
 
 }
 
 .content-wrapper {
-  margin-top: 64px;
+  margin-top: 72px;
   /*changing the height moves the nav bar for some reason*/
   height: 1080px;
 }
@@ -82,10 +85,10 @@ body {
   height: 1000px;
   position: relative;
   margin: auto;
-  padding-top: 16px;
-  border-top-style: solid;
+  /*padding-top: 16px;*/
+  /*border-top-style: solid;
   border-color: #bfbfbf;
-  border-width: 2px;
+  border-width: 2px;*/
 }
 
 .gallery-main {
@@ -150,7 +153,7 @@ body {
 }
 
 .highlight {
-  border-color: #000000;
+  border-color: #cccccc;
 }
 
 .public-art {
@@ -207,7 +210,7 @@ body {
   max-height: 300px;
   max-width: 300px;
   margin: auto;
-  border: 4px solid #d9d9d9;
+  /*border: 4px solid #d9d9d9;*/
 }
 
 .archive-modal {
