--- a/style.css
+++ b/style.css
@@ -7,6 +7,22 @@ body {
   margin: 0;
 }
 
+h2 {
+  font-weight: normal;
+  text-transform: uppercase;
+  letter-spacing: 2px;
+  color: #4040bf;
+}
+
+h3 {
+  color: #737373;
+  margin-bottom: 0px;
+}
+
+p {
+  color: #737373;
+}
+
 .header {
   text-align: center;
   min-width: 600px;
@@ -20,7 +36,7 @@ body {
 
 .title {
   text-transform: uppercase;
-  font-size: 40px;
+  font-size: 2.5em;
   letter-spacing: 5px;
   text-decoration: none;
   color: #4040bf;
@@ -249,6 +265,25 @@ body {
 
 .modal-close {
   
+}
+
+.publications-wrapper {
+  max-width: 1080px;
+  min-height: 1080px;
+  margin: auto;
+}
+
+.about-wrapper {
+  max-width: 1080px;
+  padding: 0px 32px 32px 32px;
+  margin: auto;
+}
+
+.about-img {
+  max-width: 408px;
+  max-height: 544px;
+  margin: 0px 0px 28px 28px;
+  float: right;
 }
 
 .footer {
