Replace Artist Statement
Replaced the artist statement with a new one. Changed content wrappers's height to min-height.

--- a/style.css
+++ b/style.css
@@ -81,7 +81,7 @@ p {
 .content-wrapper {
   margin-top: 72px;
   /*changing the height moves the nav bar for some reason*/
-  height: 1080px;
+  min-height: 1080px;
 }
 
 .slideshow {
