--- a/style.css
+++ b/style.css
@@ -96,12 +96,17 @@ p {
   /*height: 800px;*/
 }
 
+.gallery-description {
+  max-width: 820px;
+  margin: auto;
+  margin-bottom: 48px;
+}
+
 .gallery {
   width: 1080px;
   height: 1000px;
   position: relative;
   margin: auto;
-  /*padding-top: 16px;*/
   /*border-top-style: solid;
   border-color: #bfbfbf;
   border-width: 2px;*/
@@ -200,9 +205,10 @@ p {
 }
 
 .public-art .tall {
-  width: 450px;
+  /*width: 450px;
   height: 100%;
-  margin: auto;
+  margin: auto;*/
+  max-height: 700px;
 }
 
 .archive-wrapper {
