--- a/style.css
+++ b/style.css
@@ -17,6 +17,7 @@ h2 {
 h3 {
   color: #4040bf;
   margin-bottom: 0px;
+  font-weight: 500;
 }
 
 p {
@@ -36,7 +37,7 @@ p {
 
 .title {
   text-transform: uppercase;
-  font-size: 2.5em;
+  font-size: 2.3em;
   letter-spacing: 5px;
   text-decoration: none;
   color: #4040bf;
@@ -48,9 +49,9 @@ p {
 
 .navigation a {
   text-transform: uppercase;
-  font-size: 16px;
-  margin-left: 6px;
-  margin-right: 6px;
+  font-size: 14px;
+  margin-left: 8px;
+  margin-right: 8px;
   letter-spacing: 2px;
   text-decoration: none;
   color: #8c8c8c;
