--- a/style.css
+++ b/style.css
@@ -86,14 +86,15 @@ p {
 }
 
 .slideshow {
-  width: 700px;
+  height: 800px;
   position: relative;
   margin: auto;
 }
 
 .slide-img {
   display: block;
-  width: 100%;
+  height: 100%;
+  margin: auto;
   /*height: 800px;*/
 }
 
@@ -132,7 +133,7 @@ p {
   height: 820px;
   cursor: ew-resize;
   position: absolute;
-  z-index: 1;
+  z-index: 2;
 }
 
 .prev-img {
@@ -141,6 +142,11 @@ p {
 
 .next-img {
   right: 0;
+}
+
+.archive-modal .prev-img, .archive-modal .next-img {
+  width: 50%;
+  height: 1080px;
 }
 
 /*.public-art-button {
@@ -226,7 +232,7 @@ p {
   max-width: 964px;
   padding-bottom: 32px;
   margin: auto;
-  margin-top: 32px;
+  margin-top: 64px;
 }
 
 /*.archive-tab {
@@ -265,23 +271,52 @@ p {
   max-height: 300px;
   max-width: 300px;
   margin: auto;
+  cursor: pointer;
   /*border: 4px solid #d9d9d9;*/
 }
 
 .archive-modal {
-  
+  display: none;
+  position: fixed;
+  z-index: 1;
+  padding-top: 100px;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  overflow: auto;
+  background-color: black;
+}
+
+.modal-content {
+  position: relative;
+  margin: auto;
+  width: 840px;
+  height: 840px;
 }
 
 .modal-img {
-  
-}
-
-#modal-caption {
-  
+  display: none;
+  position: relative;
+  vertical-align: middle;
+  margin: auto;
+  max-width: 100%;
+  max-height: 100%;
 }
 
 .modal-close {
-  
+  color: #cccccc;
+  position: absolute;
+  top: 10px;
+  right: 25px;
+  font-size: 35px;
+  /*font-weight: bold;*/
+}
+
+.modal-close:hover, .modal-close:focus {
+  color: #999999;
+  text-decoration: none;
+  cursor: pointer;
 }
 
 .publications-wrapper {
@@ -290,10 +325,48 @@ p {
   margin: auto;
 }
 
+.catalogue-wrapper {
+  display: grid;
+  grid-template-columns: auto auto auto;
+  grid-gap: 32px;
+  margin: 42px 32px;
+}
+
+.catalogue-item {
+  margin: auto;
+}
+
+.catalogue-item a {
+  text-decoration: none;
+}
+
+.catalogue-item a:hover {
+  opacity: 0.7;
+}
+
+.catalogue-item p {
+  text-align: center;
+  line-height: 1.4;
+}
+
+.catalogue {
+  width: 250px;
+  height: 300px;
+  margin: auto;
+}
+
 .about-wrapper {
   max-width: 1080px;
   padding: 0px 32px 32px 32px;
   margin: auto;
+}
+
+.about-wrapper a {
+  text-decoration: none;
+}
+
+.about-wrapper p:hover {
+  color: #80e0ff;
 }
 
 #cv {
