--- a/style.css
+++ b/style.css
@@ -50,7 +50,7 @@ p {
 
 .header {
   text-align: center;
-  min-width: 600px;
+  min-width: 360px;
   margin: auto;
   margin-top: 64px;
 }
@@ -103,6 +103,7 @@ p {
 
 .content-wrapper {
   margin-top: 72px;
+  min-width: 360px;
   min-height: 1080px;
 }
 
@@ -120,13 +121,14 @@ p {
 }
 
 .gallery-description {
-  max-width: 820px;
-  margin: auto;
-  margin-bottom: 48px;
+  text-align: center;
+  padding-top: 180px;
+  width: 80%;
 }
 
 .gallery {
   width: 1080px;
+  min-width: 360px;
   height: 1000px;
   position: relative;
   margin: auto;
@@ -134,6 +136,7 @@ p {
 
 .gallery-main {
   width: 1080px;
+  min-width: 360px;
   height: 820px;
   position: relative;
   margin: auto;
@@ -188,6 +191,7 @@ p {
 .gallery-nav {
   height: 140px;
   width: 700px;
+  min-width: 360px;
   margin: auto;
   margin-top: 32px;
   white-space: nowrap;
@@ -243,31 +247,35 @@ p {
 
 .archive-wrapper {
   max-width: 964px;
+  min-width: 360px;
   padding-bottom: 32px;
   margin: auto;
   margin-top: 64px;
 }
 
-/*.archive-tab {
+.tab {
   margin: auto;
+  margin-bottom: 24px;
   width: 50%;
   text-align: center;
 }
 
-.archive-tab a {
+.tab a {
   cursor: pointer;
   padding: 14px 16px;
-  font-size: 28px;
+  font-size: 24px;
+  color: #4040bf;
+  text-transform: uppercase;
 }
 
-.archive-tab a:hover {
-  color: #ccb3ff;
+.tab a:hover {
+  color: #80e0ff;
 }
 
-.archive-tab a.active {
-  color: #884dff;
-  text-shadow: 1px 1px #ddccff;
-}*/
+.tab a.active {
+  color: #00a3cc;
+  text-shadow: 1px 1px #80e0ff;
+}
 
 /*.tab-content {		 gotten by the archive script 
 
@@ -420,6 +428,11 @@ a.collapsible.active {
 
 #cv {
   text-decoration: none;
+  color: #4040bf;
+}
+
+#cv:hover {
+  color: #80e0ff;
 }
 
 .about-img {
