--- a/style.css
+++ b/style.css
@@ -55,10 +55,6 @@ p {
   margin-top: 64px;
 }
 
-.homepage {
-
-}
-
 .title {
   text-transform: uppercase;
   font-size: 2.3em;
@@ -120,12 +116,6 @@ p {
   /*height: 800px;*/
 }
 
-.gallery-description {
-  text-align: center;
-  padding-top: 180px;
-  width: 80%;
-}
-
 .gallery {
   width: 1080px;
   min-width: 360px;
@@ -151,6 +141,14 @@ p {
 
 .wide {
   height: 75%;
+}
+
+.gallery-description {
+  text-align: center;
+  padding: 20% 5% 0 5%;
+  border-style: solid;
+  border-width: 4px;
+  border-color: #e6e6e6;
 }
 
 /* === GALLERY NAVIGATION === */
@@ -277,10 +275,6 @@ p {
   text-shadow: 1px 1px #80e0ff;
 }
 
-/*.tab-content {		 gotten by the archive script 
-
-}*/
-
 .archive-grid {
   display: inline-grid;
   grid-template-columns: auto auto auto;
@@ -293,7 +287,6 @@ p {
   max-width: 300px;
   margin: auto;
   cursor: pointer;
-  /*border: 4px solid #d9d9d9;*/
 }
 
 .archive-modal {
@@ -322,7 +315,11 @@ p {
   vertical-align: middle;
   margin: auto;
   max-width: 100%;
-  max-height: 100%;
+  height: 100%;
+}
+
+.wide {
+  height: 75%;
 }
 
 .modal-close {
@@ -331,7 +328,6 @@ p {
   top: 10px;
   right: 25px;
   font-size: 35px;
-  /*font-weight: bold;*/
 }
 
 .modal-close:hover, .modal-close:focus {
