--- a/style.css
+++ b/style.css
@@ -86,15 +86,6 @@ p {
   text-shadow: 1px 1px #80e0ff;
 }
 
-/*.background {
-  background-image: url("./images/IMG_0312.jpg");
-  height: 100%;
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: cover;
-  position: relative;
-}*/
-
 /* === GALLERY === */
 
 .content-wrapper {
@@ -119,7 +110,7 @@ p {
 .gallery {
   width: 1080px;
   min-width: 360px;
-  height: 1000px;
+  min-height: 1080px;
   position: relative;
   margin: auto;
 }
@@ -127,7 +118,7 @@ p {
 .gallery-main {
   width: 1080px;
   min-width: 360px;
-  height: 820px;
+  height: 740px;
   position: relative;
   margin: auto;
 }
@@ -145,17 +136,19 @@ p {
 
 .gallery-description {
   text-align: center;
-  padding: 20% 5% 0 5%;
+  line-height: 140%;
+  padding: 20% 6% 0 6%;
   border-style: solid;
   border-width: 4px;
   border-color: #e6e6e6;
+  background-color: #fbfbfb;
 }
 
 /* === GALLERY NAVIGATION === */
 
 .prev-img, .next-img {
   width: 440px;
-  height: 820px;
+  height: 740px;
   cursor: ew-resize;
   position: absolute;
   z-index: 2;
@@ -171,7 +164,7 @@ p {
 
 .archive-modal .prev-img, .archive-modal .next-img {
   width: 50%;
-  height: 1080px;
+  height: 70%;
 }
 
 .gallery-info {
@@ -299,14 +292,14 @@ p {
   width: 100%;
   height: 100%;
   overflow: auto;
-  background-color: black;
+  background-color: #ffffff;
 }
 
 .modal-content {
   position: relative;
   margin: auto;
-  width: 840px;
-  height: 840px;
+  width: 740px;
+  height: 740px;
 }
 
 .modal-img {
