More exhibition changes
Removed the exhibition notice from the front page. Removed the studio images from the Prince exhibition and added the remaining image info. Removed the heading from the Oakland exhibition and corrected some typos. Moved a studio image to the about page and added a max-width to it. Updated the client's CV on the about page.

--- a/style.css
+++ b/style.css
@@ -509,6 +509,7 @@ a.collapsible.active {
 
 .about-img {
   max-height: 480px;
+  max-width: 540px;
   margin: 0px 0px 28px 28px;
   float: right;
 }
