--- a/style.css
+++ b/style.css
@@ -198,7 +198,7 @@ a b {
   display: block;
   height: 100%;
   margin: auto;
-  /*height: 800px;*/
+  max-height: 400px;
 }
 
 .gallery {
@@ -221,12 +221,14 @@ a b {
   display: block;
   max-width: 1080px;
   height: 100%;
+  max-height: 400px;
   margin: auto;
 }
 
 .slide-img.wide,
 .gallery-img.wide {
   height: 85%;
+  max-height: 264px;
 }
 
 .gallery-description {
